# sol.metadata

./: .gas-snapshot  .gitignore  .gitmodules  404.html  README.md  foundry.toml  index.html  print.html  searchindex.js  searchindex.json
cli/: Cargo.toml  shell.nix  test.file
cli/src/: lib.rs  main.rs
cli/src/cli/: build.rs  magic.rs  mod.rs  output.rs  schema.rs  validate.rs
cli/src/cli/deploy/: mod.rs
cli/src/cli/magic/: ls.rs
cli/src/cli/schema/: ls.rs  show.rs  validate.rs
cli/src/deploy/: dis.rs  mod.rs  registry.rs  transaction.rs
cli/src/meta/: magic.rs  mod.rs  normalize.rs
cli/src/meta/interpreter_caller/: v1.rs
cli/src/meta/op/: v1.rs
cli/src/meta/rain/: v1.rs
cli/src/meta/solidity_abi/: v2.rs
cli/src/subgraph/: mod.rs  query.graphql  schema.json
script/: 1_EmitMeta.sg.sol  2_DeploySubgrpah.sg.sol  3_MetaBoardEntityTest.sg.sol  4_MetaV1EntityTest.sg.sol  5_MultiEmitMeta.sg.sol  6_MultiEmitTest.sg.sol  Subgraph.sol
scripts/: 1_EmitMeta.sg.sol  2_DeploySubgrpah.sg.sol  3_MetaBoardEntityTest.sg.sol  4_MetaV1EntityTest.sg.sol  5_MultiEmitMeta.sg.sol  6_MultiEmitTest.sg.sol  DeploySubgrpah.s.sol  abi.json  config.json
specs/: metadata-v1.md
src/: IMetaBoardV1.sol  IMetaV1.sol  LibMeta.sol  MetaBoard.sol
subgraph/: .env  .gitignore  Cargo.toml  README.md  hardhat.config.ts  package-lock.json  package.json  schema.graphql  shell.nix  subgraph.template.yaml  subgraph.yaml  tsconfig.json
subgraph/abis/: MetaBoard.json
subgraph/config/: hardhat.json  localhost.json  mumbai.json
subgraph/docker/: docker-compose.yml
subgraph/scripts/: deploy.ts  deployConfig.json  index.ts
subgraph/src/: lib.rs  metaBoard.ts
subgraph/test/: 1_factory.ts  2_ emitMeta.test.ts  demo.rs  emitMetaV1.test.ts  utils.ts
subgraph/tests/: notice_test.rs
subgraph/tests/common/: cbor.rs  mod.rs
test/: LibMeta.t.sol  MetaBoard.t.sol
(+83 files in other folders)
