[package]
name = "rain_metadata_cli"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
anyhow = "1.0.70"
clap = { version = "4.2.5", features = ["cargo", "derive"] }
graphql_client = "0.12.0"
tokio = { version = "1.28.0", features = ["full"] }
serde_json = "1.0.96"
schemars = "0.8.12"
once_cell = "1.17.2"
regex = "1.8.3"
strum = { version = "0.24", features = ["derive"] }
serde = "1.0.163"
validator = { version = "0.16", features = ["derive"] }
