[package]
name = "metaboard-subgraph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs", rev="6b6c5115838008565d774d784262e61e01129ebb", default-features = false, features = ["legacy"] }
ethers-solc = { git = "https://github.com/gakonst/ethers-rs", rev="6b6c5115838008565d774d784262e61e01129ebb", features = ["full"] }
ethers-providers = { git = "https://github.com/gakonst/ethers-rs", rev="6b6c5115838008565d774d784262e61e01129ebb", features = ["ws"] }
ethers-signers = "2.0.4"
tokio = { version = "1.28.0", features = ["full"] }
eyre = "*"
hex = "*"
cbor = "0.4.1"
serde_json = "1.0.96"
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
